--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,14 @@
     "@react-three/postprocessing": "^3.0.4",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.1",
+    "konva": "^9.3.20",
     "leva": "^0.10.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-konva": "^19.0.3",
     "react-router-dom": "^7.1.5",
+    "seedrandom": "^3.0.5",
     "three": "^0.173.0"
   },
   "devDependencies": {
