--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
     "axios": "^1.7.9",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.4.1",
     "konva": "^9.3.20",
     "leva": "^0.10.0",
